Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-5232

Parquet reader error message prints memory address instead of value

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 2.9.0
    • Impala 2.9.0
    • Backend
    • ghx-label-2

    Description

      WARNINGS: Corrupt Parquet file 'hdfs://xxxx.parq;: 219627520 bytes of encoded levels but only 0x7f6dd4949e40 bytes left in page
      

      Attachments

        Activity

          People

            poojanilangekar Pooja Nilangekar
            tarmstrong Tim Armstrong
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: